--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ input, select {
 
 /* MASTER STYLE DOCUMENT */ 
 body{
-background-color: #ccc;
+background-color: rgb(255, 255, 255);
 }
 
 .main-wrapper{
@@ -114,8 +114,8 @@ a{
 
 header nav{
     width: 100%;
-    height: 60px;
-    background-color: #fff;
+    height: 70px;
+    background-color:#fff;
 }
 
 header nav ul{
@@ -131,8 +131,9 @@ header nav ul li{
 header nav ul li a{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
-    color: #111;
+    color: #0073FF;
     line-height: 16px;
+    background-color: #fff;
 }
 
 header .nav-login{
@@ -151,7 +152,7 @@ header .nav-login form input{
     padding: 0px 10px;
     margin-right: 10px;
     border: none;
-    background-color: #ccc;
+    background-color: rgb(235, 235, 235);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 30px;
@@ -163,14 +164,15 @@ header .nav-login form button{
     height: 30px;
     margin-right: 10px;
     border: none;
-    background-color: #f3f3f3;
+    background-color: #fafafa;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     cursor: pointer;
 }
 
 header .nav-login form button:hover{
-    background-color: #ccc;
+    background-color: #0073FF;
+    color:#fff;
 }
 
 header .nav-login a{
@@ -197,6 +199,9 @@ header .nav-login a{
 }
 
 /* SIGNUP STYLE SECTION */
+.main-container .main-wrapper h3{
+    color:#0073FF;
+}
 
 .signup-form{
     width: 400px;
@@ -209,7 +214,7 @@ header .nav-login a{
     height: 40px;
     padding: 0px 5%;
     margin-bottom: 4px;
-    border: none;
+    border-radius: 5px;
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -219,16 +224,22 @@ header .nav-login a{
 .signup-form button{
     display: block;
     margin:0 auto;
-    width: 30%;
+    width: 40%;
     height: 40px;
     border: none;
-    background-color: #222;
+    background-color: #0073FF;;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: #fff;
     cursor: pointer;
 }
 
-.signup-form button:hover{
-    background-color: #111;
+/* INDEX STYLE SECTION */
+
+.illustrator{
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    width: 700px;
+    height: 400px;
 }
